--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><link rel="stylesheet" type="text/css" href="css/style.css">
 <title>Paradox of Fools</title>
 <body>
 <h1>Paradox of Fools</h1>
 <p>This is the novel of Clare Coppel</p>
+</body>
