--- a/unit3.5/index.html
+++ b/unit3.5/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Paradox of Fools</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 <body>
@@ -20,7 +20,7 @@
 <li> makes very little sense</li>
 <li>celebrates sloppy handwriting</li>
 
-<p>Contact me at <a href="clare.coppel@gmail.com">email</a>
+<p>Contact me at <a href="mailto:clare.coppel@gmail.com">email</a>
 
 
 </body>
