--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -6,11 +6,19 @@
 
 </head>
 <body>
+<div class="wrapper">
 <img src="image/pofcloud.jpg" alt="pofcloud" title="Paradox of Fools Cloud">
+<header>
 
 <h1>Paradox of Fools</h1>
 
 <h2 id="Agent of Chaos">Agent of Chaos</h2>
+</header>
+<nav>
+</nav>
+<aside>
+</aside>
+<article class="description">
 
 <p>A novel about a bridge and other topics by Clare Coppel</p>
 <p> Paradox of Fools explores the ways in which ideas are shared via the internet. Paradox of Fools is dedicated to Kurt Vonnegut and butterflies. It's kind of a shitty novel that humbly seeks to disrupt the selfies and the memes of social media. Paradox of Fools can be read in either direction on Instagram.
@@ -21,7 +29,9 @@
 <li>celebrates sloppy handwriting</li>
 
 <p>Contact me at <a href="mailto:clare.coppel@gmail.com">email</a>
-
-
+</article>
+</p>
+<footer>
+</footer>
 </body>
 </html>
