--- a/unit_10/email.html
+++ b/unit_10/email.html
@@ -11,12 +11,13 @@ border="1" width="100%">
 <th style="font-size: 2em;"
 align="left">Valencia</th>
 <td>
+<img src="0020014.jpg"
 <table cellspacing="20" align="center" border="1">
 <tr>
 <td colspan="2" align="center"
-style="background: blue;">
-<img src="0020014.jpg"
+style="background: orange;">
 style="width: 400px;"></td>
+
 </tr>
 </table>
 </body>
