--- a/unit_10/email.html
+++ b/unit_10/email.html
@@ -14,8 +14,7 @@ align="left">Valencia</th>
 <table cellspacing="20" align="center" border="1">
 <tr>
 <td colspan="2" align="center"
-style="background: orange;"
-style="width 400px"
+style="background: orange;
 img src="0020014.jpg">
 </td>
 
